--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <main>
         <section class="faq">
             <img
-                src="../ProjetoFaQ/css/imagens/ilustracao-computador.svg" 
+                src="css/imagens/ilustracao-computador.svg" 
                 alt="ilustacao moca mexendo no pc"
                 class="ilustracao">
             
